<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/side_nav_home"
            android:icon="@drawable/ic_play"
            android:title="@string/home_live"/>
        <item
            android:id="@+id/side_nav_playlists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/playlists"/>
        <!-- side_nav_channels удалён: каналы открываются только из плеера. -->
        <!-- side_nav_tv_guide удалён: программа показывается прямо в списке. -->
        <item
            android:id="@+id/side_nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/side_nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/recent"/>
        <item
            android:id="@+id/side_nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
</menu>
